  Minor cleanup, removed unused methods
  Mess fixed, parameterless constructors re-added to Database implementations
  AbstractTableColumnSyncPanel constructor now takes FilteredTableColumnModel as parameter
  Javadoc errors and warnings fixed
  DefaultEntityConnectionServerAdmin no longer sets the RMISecurityManager (deprecated)
  ivy.xml, redundant transitive="false" removed from dependencies
  EntityConnectionServer.startWebServer() now waits for Jetty startup to complete before returning
  EntityConnectionServerTest.testREST() added
  Database.isAuthenticationException(SQLException) added, implemented for H2 and Oracle
  AuthenticationException added
  AbstractDatabase.createConnection() throws AuthenticationException when possible
  EntityUtil.isEntityNew() added
  EntityRESTService now uses the above
  EntityConnectionServer.doConnect() now handles AuthenticationException
  Ivy configuration build.tests added, configurations improved, build configured accordingly
  PostreSQLDatabase.isAuthenticationException() implemented
  Removed references to chinook entity definitions from unit tests
  Fixed a few Sonar issues
  Minor performance optimization in EntityResultPacker
  Server client logging no longer on by default
  Server.AuxiliaryServer.start() and stop() renamed to startServer() and stopServer()
  EntityRESTServer updated according with the above
  DefaultEntityConnectionServerAdmin.main() restart option added
  ServerUtil.getServer() error handling and logging improved
  ClientUserMonitor, user history improved a bit
  Jetty dependency updated to 9.3.2.v20150730 and Jersey to 1.19
  HttpClient library updated to 4.5
  EntityConnectionServerTest and EmpDeptRESTLoadTest updated according to HttpClient update (deprecations)
  Tomcat jdbc dependency updated to 8.0.24
  Unit tests refactored and improved a bit
  ExceptionDialog moved to UiUtil and privatized
  DateInputPanel bug fixed, focus listener only added when button was present