@@ -4,6 +4,7 @@
 package org.jminor.framework.domain;
 
 import org.jminor.common.db.DatabaseConnection;
+import org.jminor.common.db.ResultPacker;
 import org.jminor.common.model.valuemap.ValueMap;
 import org.jminor.common.model.valuemap.exception.NullValidationException;
 import org.jminor.common.model.valuemap.exception.RangeValidationException;
@@ -426,6 +427,11 @@ public interface Entity extends ValueMap<String, Object>, Comparable<Entity> {
      * @return the validator for this entity type
      */
     Validator getValidator();
+
+    /**
+     * @return the ResultPacker responsible for packing this entity type
+     */
+    ResultPacker<Entity> getResultPacker();
 
     /**
      * @return the caption to use when presenting entities of this type
